tests/bad/12_main_call_4.ris
int add(int a, int b):
    main();
    return a + b;

void main():
    add(4, 2);
    return;