tests/bad/12_main_call_4.err
Type error in line 2, column 5:
cannot call main function
